# news_deduplication

./: .gitignore  README.md  baseline.ipynb  clustering.py  evaluation.py  experiments.ipynb  pipeline.py  process_data.ipynb  pyproject.toml  test_modules.py
modules/: __init__.py  base.py  bm25.py  crossencoder.py  embeddings.py  levenshtein.py
src/eval/: evaluator.py
src/modules/: __init__.py  base.py  bm25.py  embeddings.py  jaccard.py  levenshtein.py  lstm.py  ner.py  pipeline.py  pos.py  test_modules.py
src/process_data/: assess_data.py  utils.py
